# bcos-sync

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
bcos-sync/: BlockSync.cpp  BlockSync.h  BlockSyncConfig.cpp  BlockSyncConfig.h  BlockSyncFactory.cpp  BlockSyncFactory.h
bcos-sync/state/: DownloadingQueue.cpp  DownloadingQueue.h  SyncPeerStatus.cpp  SyncPeerStatus.h
bcos-sync/utilities/: Common.h
cmake/: InstallInclude.cmake  config.cmake
doc/: README_CN.md
src/: BlockSync.cpp  BlockSync.h  BlockSyncConfig.cpp  BlockSyncConfig.h  BlockSyncFactory.cpp  BlockSyncFactory.h  CMakeLists.txt
src/interfaces/: BlockRequestInterface.h  BlockSyncInterface.h  BlockSyncMsgFactory.h  BlockSyncMsgInterface.h  BlockSyncStatusInterface.h  BlocksMessageInterface.h  BlocksMsgInterface.h
src/protocol/PB/: BlockRequestImpl.h  BlockSyncMsgFactoryImpl.h  BlockSyncMsgImpl.h  BlockSyncStatusImpl.cpp  BlockSyncStatusImpl.h  BlocksMessageImpl.cpp  BlocksMessageImpl.h  BlocksMsgImpl.h
src/protocol/proto/: BlockSync.proto
src/state/: DownloadRequestQueue.cpp  DownloadRequestQueue.h  DownloadingQueue.cpp  DownloadingQueue.h  SyncPeerStatus.cpp  SyncPeerStatus.h
src/utilities/: Common.h
test/: CMakeLists.txt
test/unittests/faker/: FakeConsensus.h
test/unittests/protocol/: BlockSyncMsgTest.cpp
test/unittests/sync/: BlockSyncTest.cpp  SyncConfigTest.cpp  SyncFixture.h
